feat: update task
