# infrastructure/adapters/driving/quarkus_resteasy_restful_api_adapter/src/main/java/br/com/lorival/reactivejavatemplate/infrastructure/adapters/driving/quarkus/restful/resources/TaskResource.java
@@ -2,6 +2,7 @@ package br.com.lorival.reactivejavatemplate.infrastructure.adapters.driving.quar
 
 import static jakarta.ws.rs.core.Response.Status.CREATED;
 
+import br.com.lorival.reactivejavatemplate.app.usecases.CompleteTaskUseCase;
 import br.com.lorival.reactivejavatemplate.app.usecases.CreateTaskUseCase;
 import br.com.lorival.reactivejavatemplate.app.usecases.GetTasksUseCase;
 import br.com.lorival.reactivejavatemplate.infrastructure.adapters.driving.quarkus.restful.mappers.TaskResponseMapper;
@@ -9,13 +10,15 @@ import io.smallrye.mutiny.Multi;
 import io.smallrye.mutiny.Uni;
 import jakarta.ws.rs.core.Response;
 import lombok.RequiredArgsConstructor;
-import org.openapi.quarkus.openapi_yml.api.DefaultApi;
+import org.openapi.quarkus.openapi_yml.api.TasksApi;
 import org.openapi.quarkus.openapi_yml.model.TaskRequest;
 
 @RequiredArgsConstructor
-public class TaskResource implements DefaultApi {
+public class TaskResource implements TasksApi {
+
   private final CreateTaskUseCase createTaskUseCase;
   private final GetTasksUseCase getTasksUseCase;
+  private final CompleteTaskUseCase completeTaskUseCase;
   private final TaskResponseMapper responseMapper;
 
   @Override
@@ -36,5 +39,15 @@ public class TaskResource implements DefaultApi {
     return createTaskUseCase
         .create(taskInput.getDetail())
         .map(task -> Response.status(CREATED).entity(responseMapper.toResponse(task)).build());
+  }
+
+  @Override
+  public Uni<Response> updateTaskAsCompleted(Long taskID) {
+    return completeTaskUseCase
+        .complete(taskID)
+        .onItem()
+        .transformToUni(ignored -> Uni.createFrom().item(Response.noContent().build()))
+        .onFailure()
+        .recoverWithItem(Response.status(Response.Status.NOT_FOUND).build());
   }
 }
